他ページの細かい修正

--- a/app/views/shared/_room_list.html.erb
+++ b/app/views/shared/_room_list.html.erb
@@ -9,7 +9,7 @@
         </div>
       <% end %>
       <% if room.status == "nonreleased" %>
-        <p>非公開</p>
+        <p class="non-released-text">非公開</p>
       <% end %>
     </div>
     <div class="room-info">
