--- a/app/assets/stylesheets/rooms/new.css
+++ b/app/assets/stylesheets/rooms/new.css
@@ -95,9 +95,10 @@ input[type="checkbox"] {
   }
 
 .sell-btn {
-  cursor: pointer;
   padding: 2vh;
-  font-weight: bold;
-  color: #ffffff;
   background-color: #2a2a2a;
+  color: #ffffff;
+  font-weight: bold;
+  border-radius: 1vh;
+  cursor: pointer;
   }
