任意表示の追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
       <div class="form-group">
         <div class="form-text-wrap">
           <label class="form-text">プロフィール画像</label>
-          <span class="indispensable">任意</span>
+          <span class="form-any">任意</span>
         </div>
         <label>
           <div class="form-image-box">
