--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -35,6 +35,7 @@
         <div class="items-explain">
           <div class="weight-bold-text">
           作品の説明
+          <span class="form-any">任意</span>
           </div>
           <%= f.text_area :item_introduction, class:"item-text", id:"item-info", placeholder:"作品の説明（必須 100文字まで)" ,rows:"5" ,maxlength:"100" %>
         </div>
@@ -42,6 +43,7 @@
         <div class="item-price-new">
           <div class="weight-bold-text">
           作品の料金
+          <span class="form-any">任意</span>
           <p>販売を希望しない場合は空欄で可</p>
           </div>
         </div>
