--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -19,6 +19,7 @@
       <div class="room-img-upload">
         <div class="weight-bold-text">
           個展ポスター画像
+          <span class="form-any">任意</span>
         </div>
         <div class="click-upload">
           <label>
