--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,7 +14,7 @@
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.price %></p>
-          <p class='item-price-sub-text'>（税込）送料込み</p>
+          <span class='item-price-sub-text'>（税込）送料込み</span>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class='buy-btn'>
-      <%= f.submit "購入" ,class:"buy-red-btn" %>
+      <%= f.submit "購入" ,class:"buy-black-btn", 'data-disable-with' => false  %>
     </div>
     <% end %>
   </div>
