ジャンル名の変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -45,7 +45,7 @@
         <li><%= link_to '絵画', rooms_genre_path(genre: "絵画"), class: "genre-list" %></li>
         <li><%= link_to '写真', rooms_genre_path(genre: "写真"), class: "genre-list" %></li>
         <li><%= link_to '書道', rooms_genre_path(genre: "書道"), class: "genre-list" %></li>
-        <li><%= link_to '立体', rooms_genre_path(genre: "立体"), class: "genre-list" %></li>
+        <li><%= link_to '彫刻', rooms_genre_path(genre: "彫刻"), class: "genre-list" %></li>
         <li><%= link_to 'テキスタイル', rooms_genre_path(genre: "テキスタイル"), class: "genre-list" %></li>
         <%# //pathにそれぞれのジャンルを認識させるためのpathを渡している %>
       </ul>
