--- a/app/assets/stylesheets/rooms/genre.css
+++ b/app/assets/stylesheets/rooms/genre.css
@@ -11,3 +11,41 @@
   background-color: #f5f5f5;
   padding: 15vh 0;
 }
+
+.pagination {
+  height: 100px;
+  margin: auto;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.pagination a {
+  background-color: grey;
+  text-decoration: none;
+}
+
+.pagination * {
+  color: white;
+  margin: 0 7px;
+  text-decoration: none;
+  padding: 12.5px 18.5px;
+  border-radius: 25px;
+}
+
+.current {
+  font-style: normal;
+  color: white;
+  background: #93c9ff;
+  border-radius: 22.5px;
+}
+
+.pagination a:hover {
+  background: #93c9ff;
+}
+
+.pagination .disabled {
+  color: #666666;
+  padding: 11px 17px;
+  border: 1px solid #666666;
+  border-radius: 23px;
+}
