--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,8 +2,8 @@
 <%= render "shared/header" %>
   <div class="lien-image-box">
   <%= image_tag "lien-image.jpg", class:"lien-image" %>
-  <h1>LIEN.</h1>
-  <p>アートで人がつながる世界に。</p>
+  <h1>LIEN</h1>
+  <p>「アート」をもっと身近な存在に。</p>
   </div>
   <%# 人気の個展 %>
   <div class="info-wrap">
