--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,5 @@
 <header class="second-header">
-  <%= link_to "LIEN.", root_path, class:"lien-icon" %>
+  <%= link_to root_path, class:"lien-icon" do %>
+    <%= image_tag "lien_white.png", class: "lien-logo-white" %>
+    <% end %>
 </header>
