--- a/app/assets/stylesheets/rooms/index.css
+++ b/app/assets/stylesheets/rooms/index.css
@@ -15,7 +15,6 @@
 }
 
 .lien-image-box img {
-  cursor: pointer;
   transition-duration: 0.3s;
 }
 
@@ -34,10 +33,10 @@
 
 .lien-image-box p {
   position: absolute;
-  top: 55%;
+  top: 57%;
   left: 10%;
   color: #ffffff;
-  font-size: 4vh;
+  font-size: 3vh;
 }
 .info-wrap {
   margin-bottom: 30vh;
@@ -211,20 +210,16 @@ a {
 .no-img-box {
   width: 25vh;
   height: 25vh;
-  border: 1vh solid #302e2e ;
-  border-radius: 4vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0.2;
   object-fit: cover; 
 }
 
 .no-img {
-  font-weight: bold;
-  font-size: 6vh;
-  color: #302e2e;
+  width: 25vh;
+  height: 25vh;
 }
 
 .room-info {
@@ -264,6 +259,7 @@ a {
 .like-count-sum {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   margin: 1vh;
 }
 
