--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 <div class="my-page-wrap">
   <%# 他ユーザーの詳細とマイページで同じビューファイルを使いまわすためのif文 %>
   <div class="user-side-bar">
-    <% if current_user.id == @user.id %>
+    <% if user_signed_in? && current_user.id == @user.id %>
       <div class="left-contents">
         <ul class="left-lists">
           <%= link_to new_room_path do %>
@@ -56,7 +56,7 @@
     <div class=right-under-contents>
         <ul class="room-lists">
           <% @rooms.each do |room| %>
-            <% if @user.id == current_user.id && room.user_id == @user.id%>          <%# 自分のユーザー詳細のページにアクセスした際に表示する条件 %>
+            <% if user_signed_in? && @user.id == current_user.id && room.user_id == @user.id%>          <%# 自分のユーザー詳細のページにアクセスした際に表示する条件 %>
               <%= render partial: "shared/room_list", locals: {room: room} %>
             <% elsif room.user_id == @user.id && room.status == "released" %>        <%# 他のユーザーの詳細のページにアクセスした際に表示する条件 %>
               <%= render partial: "shared/room_list", locals: {room: room} %>
