--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -25,8 +25,9 @@
           <label>
             <div class="form-image-box">
               <%= image_tag "no-image.jpg" , class: "image-btn" %>
-              <p>クリックしてファイルをアップロード</p>
+              <p id="click-upload">クリックしてファイルをアップロード</p>
             </div>
+            <div class="image-preview", id="image-list"></div>
             <%= f.file_field :room_image, class: "room-file" , id:"room-image" %>
           </label>
         </div>
