--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,13 +25,16 @@
           <label class="form-text">プロフィール画像</label>
           <span class="form-any">任意</span>
         </div>
+        <div class="click-upload">
         <label>
           <div class="form-image-box">
             <%= image_tag "no-image.jpg" , class: "image-btn" %>
-            <p>クリックしてファイルをアップロード</p>
+            <p id="click-upload">クリックしてファイルをアップロード</p>
           </div>
+            <div class="image-preview", id="image-list"></div>
             <%= f.file_field :avatar, class:"avatar-file", id:"avatar" %>
         </label>
+        </div>
       </div>
 
       <div class="form-group">
