いいねボタン機能の部分テンプレート化

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,16 +10,8 @@
         <%= image_tag "lien_logo_mark.png", class:"no-img-show" %>
       </div>
     <% end %>
-    <div class="like-btn-box">
-      <% if user_signed_in? && current_user.already_liked?(@room) %>
-        <%= button_to room_like_path(@room), method: :delete, class: "like-btn" do%>
-          <%= image_tag "like_red.png", class: "like-delete-btn"%>
-        <% end %>
-      <% else %>
-        <%= button_to room_likes_path(@room) do %>
-          <%= image_tag "like_white.png", class: "like-delete-btn"%>
-        <% end %>
-      <% end %>
+    <div class="like-btn-box", id="likes_buttons_<%= @room.id %>" >
+      <%= render partial: 'likes/like' %>
     </div>
   </div>
   <% if user_signed_in? && @room.user_id == current_user.id %>
