人気個展一覧へのリンク設定

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -15,7 +15,7 @@
         人気の個展
         </h2>
         <div class="more-rooms">
-          <%= link_to "more", "#", class: "popular-room-index" %>
+          <%= link_to "more", rooms_popular_path, class: "popular-room-index" %>
         </div>
       </div>
 
