--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -107,19 +107,19 @@
     <div class="artist-contents">
       <div class="artist-image-box">
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_1.jpg", class:"artist-image" %>
           <% end %>
           <p>Emma</p>
         </div>
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_2.jpg", class:"artist-image" %>
           <% end %>
           <p>Lauren Tsai</p>
         </div>
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_3.jpg", class:"artist-image" %>
           <% end %>
           <p>James Jean</p>
@@ -127,19 +127,19 @@
       </div>
       <div class="artist-image-box">
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_4.jpg", class:"artist-image" %>
           <% end %>
           <p>Alex</p>
         </div>
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_5.jpg", class:"artist-image" %>
           <% end %>
           <p>Little Thunder</p>
         </div>
         <div class="artist-image-link">
-          <%= link_to rooms_genre_path(genre: "絵画") do %>
+          <%= link_to "#" do %>
           <%= image_tag "artist_6.jpg", class:"artist-image" %>
           <% end %>
           <p>Tsumi</p>
